cloud-to-cloud-network-test/frontend/src/app/dashboard/dashboard.component.scss
/* ... */
.btn-download:focus,
.btn-download.focus {
  outline: 0;
  box-shadow: 0 0 0 2px #ee7700 !important;
  color: #FFFFFF !important;
  border-color: #ee7700;
}

.interested-text-style {
  margin-bottom: 5px !important;
  line-height: 0px !important;
  font-weight: 400;
}

.margin-top-50 {
  margin-top: 50px;
}

.margin-top-10 {
  margin-top: 10px;
}

.map-container {
  height: 300px;
}

.leaflet-container {
  z-index: 1;
}

.leaflet-marker-icon {
  height: 39px !important;
  width: 22px !important;
  margin-left: -11px !important;
  margin-top: -39px !important;
}

.leaflet-popup {
  bottom: 10px !important;
}

.leaflet-popup-close-button {
  display: none;
  opacity: 0;
}

.leaflet-control-attribution {
  display: none !important;
}

#chartdiv {
  width: 100%;
  height: 300px;
}

.amcharts-chart-div a {
  display: none !important;
  opacity: 0 !important;
}

a:focus,
a:hover {
  color: inherit;
  text-decoration: none;
}

.sb-style .sb-button {
  min-width: 25px !important;
  height: 35px !important;
  margin-top: 0px;
}

.sb-style button {
  padding-top: 5px !important;
}

.mat-tab-label {
  line-height: 48px;
  height: 48px;
  padding: 0 12px;
  font-size: 14px;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-weight: 500;
  cursor: pointer;
  box-sizing: border-box;
  color: currentColor;
  opacity: .6;
  min-width: 160px !important;
  text-align: center;
  position: relative;
}

.mat-ink-bar {
  background-color: #c65030 !important;
}

.next_btn {
  padding: 0;
  border: none;
  background: none;
  color: #2196F3;
}

.next_btn_disabled {
  float: right; // margin-right: 10px; 
  color: #FFFFFF;
  background-color: #545454;
  cursor: pointer;
  margin-top: -5px;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
  transform: initial !important;
}
.cart-header-right-panel {
  margin-bottom: 25px;
  padding: 0.75rem 0.0rem;
}

.menu-tab-header {
  border-bottom: 1px solid #e0e0e0;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 12px;
}

.source-cloud-drop-down {
  margin-top: 45px;
  margin-bottom: 10px;
  font-weight: 500;
}

.selected-azure-menu {
  padding: 10px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.azure-menu {
  padding: 10px 0px 10px 7px;
  border: none;
  background: none;
  font-size: 14px;
}

.selected-aws-menu {
  padding: 0px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.aws-menu {
  padding: 0px 0px 10px 7px;
  border: none;
  background: none;
  font-size: 14px;
}

.selected-gce-menu {
  padding: 0px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.active-back-button {
  float: left; // margin-right: 10px; 
  color: #2196F3 !important; // background-color: #2196F3 !important;
  cursor: pointer; //margin-top: -5px;
  //box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
  //outline: none;
  //width: 108px;
}

.back-button {
  padding: 0;
  border: none;
  background: none;
}

.non-active-destination-menu {
  padding: 7px;
  color: #cfcfcf;
}

.active-destination-menu {
  position: relative;
  background: #fc8768;
  border: 1px solid #fc8768;
  padding: 7px;
  color: #FFFFFF;
}

.active-destination-menu:after,
.active-destination-menu:before {
  top: 100%;
  left: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.active-destination-menu:after {
  border-color: rgba(136, 183, 213, 0);
  border-top-color: #fc8768;
  border-width: 8px;
  margin-left: -10px;
}

.active-destination-menu:before {
  border-color: rgba(194, 225, 245, 0);
  border-top-color: #fc8768;
  border-width: 8px;
  margin-left: -10px;
}

.bubble {
  border-radius: 1000px;
  width: 14px;
  height: 14px;
  background-color: #bbb;
  display: block;
  margin: 0 auto .5em;
  position: relative;
  z-index: 1;
}







.after-sselection-source-cloud {
  border: 0;
  outline: 0;
  background: transparent;
  //border-bottom: 1px solid #a8a8a8;
  margin-bottom: 15px;
  width: 200px;
}

.before-sselection-source-cloud {
  border: 0;
  outline: 0;
  background: transparent;
  //border-bottom: 1px solid #a8a8a8;
  margin-bottom: 15px;
  width: 200px;
  color: #a8a8a8;
}

.before-selection-source-region {
  border: 0;
  outline: 0;
  background: transparent;
  //border-bottom: 1px solid #a8a8a8;
  width: 200px;
  color: #a8a8a8;
}

.after-selection-source-region {
  border: 0;
  outline: 0;
  background: transparent;
  //border-bottom: 1px solid #a8a8a8;
  width: 200px;
}

.clock {
  //margin-top: 7px;
  transform: rotate(90deg);
  margin-right: 7px;
  width: 20px;
  height: 20px;
  line-height: 6px;
}

.timestamp {
  width: 115px;
  font-size: 14px; //border: 0;
  //outline: 0;
  //background: transparent;
  //border-bottom: 1px solid #a8a8a8;
}

.padding-0 {
  padding: 0px;
}

.height-306 {
  height: 306px;
}

.padding-right-0 {
  padding-right: 0px;
}

.padding-right-10 {
  padding-right: 10px;
}

.source-tab {
  overflow-y: auto;
  height: 175px;
  overflow-x: hidden;
}

.color-a8a8a8 {
  color: #a8a8a8;
}

.source-cloud-region-label {
  margin-bottom: 10px;
  font-weight: 500;
}

.height-170 {
  height: 175px;
}

.height-162 {
  height: 167px;
}

.destination-tab {
  margin: 0px;
  //height: 33px;
  font-weight: 500;
}

.cursor-pointer {
  cursor: pointer;
}

.destination-cloud-provider {
  margin: 0px;
  margin-top: 15px;
}

.margin-right-5 {
  margin-right: 5px;
}

.destination-region {
  margin: 0px;
  margin-top: 10px;
  overflow-y: auto;
  height: 119px;
}

.padding-top-10 {
  padding-top: 10px
}

.test-source {
  margin-top: 8px;
  border-bottom: 1px solid #e0e0e0;
  margin-left: 0px;
  margin-right: 0px;
  padding-bottom: 8px;
}

.test-source-cloud-label {
  font-weight: 500;
  margin-left: -5px;
}

.test-source-region-label {
  font-weight: 500;
  margin-left: -40px;
}
/* ... */

